/portal and /me routes support
